--- a/src/css/home.css
+++ b/src/css/home.css
@@ -12,6 +12,9 @@
 .movie_time{
     padding: 10px 10px;
     margin: 10px 10px;
+    cursor: pointer;
+    background-color: #3498DB;
+    color: white;
 }
 
 .movie_times_container{
@@ -41,3 +44,46 @@
     margin-top: 10px;
     color: lightslategray;
 }
+
+.date_button{
+    width: 50%;
+    padding: 10px 10px;
+}
+
+.selected_date{
+    border: 3px solid green; 
+}
+
+#drop_down_icon{
+    padding-left: 5px;
+    width: 10px;
+    height: 10px;
+}
+
+#drop_down_button {
+    background-color: #3498DB;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+  }
+
+#drop_down_container{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 10px;
+}
+
+#drop_down{
+    border: 3px solid black; 
+    margin-bottom: 10px;
+}
+
+.hide_list {
+    visibility: hidden;
+    opacity: 0;
+    max-height: 0px;
+  }
